<resources>
    <string name="app_name">Village</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit_to_firebase">Submit</string>
    <string name="firebase_campaign_node">campaigns</string>

    <string name="alert_dialog_greeting">Welcome to village</string>
    <string name="swipe_instructions"> Swipe left to see more campaigns \nSwipe right to save a campaign \nClick a campaign for more info</string>
    <string name="alert_dialog_ok">got it?</string>
    <string name="title_activity_campaign">CampaignActivity</string>
    <string name="title_activity_preference">PreferenceActivity</string>
    <string name="community">Community</string>
    <string name="events">Events</string>
    <string name="volunteer">Volunteer</string>
    <string name="business">Business</string>
    <string name="education">Education</string>
    <string name="housing">Housing</string>
    <string name="medical">Medical</string>
    <string name="sports">Sports</string>
    <string name="tragedy">Tragedy</string>
    <string name="campaign_cv_action">More</string>

    <string name="title_activity_about_village">AboutVillageActivity</string>
    <string name="about_village_text">The idea for village was born in a re-purposed zipper factory
    in Queens, New York. Our mission is to address the obscenely disparate income levels of New Yorkers
    by providing a fast and efficient way to give and receive acts of kindness. We aim to bring neighbors
    together and believe that empathy is the balm that this world needs most. Thank you for being a part
    of our village.</string>
    <string name="about_village_quote">\"When we give cheerfully and accept gratefully, everyone is blessed.\"  "\u2014" Maya Angelou</string>
    <string name="create_campaign_header_txt">To create your campaign, please provide the following information:</string>
    <string name="payment_nav_action">return</string>
</resources>