<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/opaqueLightBlue"
    tools:context="nyc.c4q.capstone.favorites.PreferenceActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/instructions_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/campaign_prefs_instructions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:text="Choose from the following categories to be shown campaigns that align with your interests:"
                    android:textAlignment="center"
                    android:textAppearance="@color/darkBlue"
                    android:textSize="24sp" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/ll1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/instructions_layout"
                android:gravity="center"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/medButton"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/preference_round_button"

                    android:text="@string/medical" />


                <Button
                    android:id="@+id/housing_button"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/preference_round_button"

                    android:text="@string/housing" />


                <Button
                    android:id="@+id/education_button"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/preference_round_button"


                    android:text="@string/education" />


            </LinearLayout>


            <LinearLayout
                android:id="@+id/ll2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll1"
                android:backgroundTint="@color/lightBlue"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/children"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/preference_round_button"
                    android:text="Children" />


                <Button
                    android:id="@+id/volunteerButton"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/preference_round_button"
                    android:text="@string/volunteer" />

                <Button
                    android:id="@+id/eventsButton"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/preference_round_button"
                    android:text="@string/events" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll2"
                android:gravity="center"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/commButton"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/preference_round_button"
                    android:text="@string/community" />


                <Button
                    android:id="@+id/sports_button"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/preference_round_button"
                    android:text="@string/sports" />


                <Button
                    android:id="@+id/tragedy_button"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/preference_round_button"
                    android:text="@string/tragedy" />

            </LinearLayout>

            <Button
                android:id="@+id/submit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll3"
                android:text="Save Preferences"
                android:layout_margin="8dp"
                android:background="@drawable/rounded_button"
                android:textColor="@color/darkBlue" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>




